; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/cpp/extr_include.c_setobjname.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/cpp/extr_include.c_setobjname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@objname = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [5 x i8] c"$O: \00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setobjname(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @strlen(i8* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = add nsw i32 %6, 5
  %8 = call i64 @domalloc(i32 %7)
  %9 = inttoptr i64 %8 to i8*
  store i8* %9, i8** @objname, align 8
  %10 = load i8*, i8** @objname, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @strcpy(i8* %10, i8* %11)
  %13 = load i8*, i8** @objname, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sub nsw i32 %14, 2
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8, i8* %13, i64 %16
  %18 = load i8, i8* %17, align 1
  %19 = sext i8 %18 to i32
  %20 = icmp eq i32 %19, 46
  br i1 %20, label %21, label %28

21:                                               ; preds = %1
  %22 = load i8*, i8** @objname, align 8
  %23 = load i32, i32* %3, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %22, i64 %24
  %26 = getelementptr inbounds i8, i8* %25, i64 -1
  %27 = call i32 @strcpy(i8* %26, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  br label %34

28:                                               ; preds = %1
  %29 = load i8*, i8** @objname, align 8
  %30 = load i32, i32* %3, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i8, i8* %29, i64 %31
  %33 = call i32 @strcpy(i8* %32, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  br label %34

34:                                               ; preds = %28, %21
  ret void
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i64 @domalloc(i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
